--- a/myfirstapp/package.json
+++ b/myfirstapp/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^0.2.14",
+    "aws-amplify": "^3.0.24",
     "vue": "^2.5.2"
   },
   "devDependencies": {
